margin right corrected on mobile view

--- a/style.css
+++ b/style.css
@@ -41,7 +41,6 @@ body{
     padding: 35px;
     border-radius: 7px;
     font-size: 13px;
-    margin-right: 20px;
 }
 
 .grid-item h4 {
@@ -85,8 +84,13 @@ body{
 
 @media (min-width:576px) {
 
+    .grid-item{
+        margin-right: 20px;
+    }
+
     #testimonial-grid-container {
         display: flex;
+        min-width: 320px;
         max-width: 1440px;
         margin: 0 auto;
         justify-content: space-between;
